# thwelly_ai_tools

./: .gitignore  ARC42_Architecture_Documentation.md  HOWTO_BUILD_RELEASE.md  README.md  backup_db.sh  buildaiwebui.sh  cloud-todo-list.md  cloud-todo-list.txt  docker-compose.yml  nginx.conf  server_build.sh  update_migration.md
aiproxysrv/: .dockerignore  DB_IMPL_DEVS.md  OPENAPI_IMPL_DEFS.md  README.md  README_USER_SETUP.md  aiproxy-server.py  alembic.ini  alembic.ini.docker  create_initial_user.py  dbbackup.sh  docker-compose-postgres.yaml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  env_template  openai_impl.md  pyproject.toml  requirements.txt  taskmgr.py
aiproxysrv/scripts/: add_title_template.py  create_initial_user.py  fix_song_auto_models.py  seed_prompts.py  update_prompt_template_models.py
aiproxysrv/src/: server.py  taskmgr.py  worker.py  wsgi.py
aiproxysrv/src/alembic/: env.py
aiproxysrv/src/alembic/versions/: 02794a7298bd_add_title_and_tags_to_generated_images.py  0a063377da81_extend_prompt_templates_with_model_.py  1ab0353590b6_add_songs_table.py  3cc5ed08a974_convert_ids_from_integer_to_uuid.py  3ffbc7c3ecf6_create_generated_images_table.py  6685241cf8e3_add_unique_constraint_on_prompt_.py  67836ff70afb_add_title_and_tags_fields_to_songs_table.py  78f60c60052e_add_prompt_templates_table.py  91c1fff66986_add_stem_url_and_generated_at_to_song_.py  aaef2a47784e_add_song_choices_table_and_refactor_.py  ad849273b893_add_rating_to_song_choices.py  ce70bed82146_add_search_indexes_to_songs.py  da938e701528_add_search_indexes_to_generated_images.py  df73746c9254_add_workflow_field_to_songs.py  f441e59d721f_add_users_table_for_authentication.py  ff0ed3b184db_add_is_instrumental_field_to_songs_table.py
aiproxysrv/src/api/: app.py  auth_middleware.py  chat_routes.py  image_controller.py  image_routes.py  json_helpers.py  prompt_routes.py  redis_controller.py  redis_routes.py  song_account_controller.py  song_controller.py  song_creation_controller.py  song_routes.py  song_task_controller.py
aiproxysrv/src/api/controllers/: chat_controller.py  image_controller.py  prompt_controller.py  redis_controller.py  song_account_controller.py  (+4 more)
aiproxysrv/src/business/: __init__.py  external_api_service.py  file_management_service.py  image_business_service.py  song_business_service.py
aiproxysrv/src/celery_app/: __init__.py  celery_config.py  slot_manager.py  tasks.py
aiproxysrv/src/config/: settings.py
aiproxysrv/src/db/: __init__.py  database.py  image_service.py  models.py  song_service.py  user_service.py
aiproxysrv/src/mureka/: __init__.py  base_client.py  client.py  generation_client.py  handlers.py  instrumental_client.py
aiproxysrv/src/schemas/: __init__.py  chat_schemas.py  common_schemas.py  image_schemas.py  prompt_schemas.py  song_schemas.py  user_schemas.py
aiproxysrv/src/utils/: __init__.py  logger.py  prompt_processor.py
aitestmock/: README.md  docker-compose.yml  dockerfile  pyproject.toml
aitestmock/src/: server.py
aitestmock/src/api/: chat.py  mureka.py  openai.py
aitestmock/src/controllers/: mureka_controller.py  openai_controller.py
aitestmock/src/services/: mureka_service.py  openai_service.py
(+253 files in other folders)
