[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiproxysrv"
version = "1.1.0"
dependencies = [
    "Flask>=3.1.2",
    "Flask-CORS>=4.0.0",
    "Werkzeug>=3.1.0",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "celery>=5.4.0",
    "redis>=5.0.1",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0"
]

[project.scripts]
start-server = "aiproxysrv.server:main"
start-worker = "aiproxysrv.worker:main"

[tool.setuptools.packages.find]
where = ["src"]
