[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiproxysrv"
version = "1.3.0"
dependencies = [
    "Flask>=3.1.2",
    "Flask-CORS>=4.0.0",
    "Werkzeug>=3.1.0",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "celery>=5.4.0",
    "redis>=5.0.1",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "flask-pydantic>=0.12.0",
    "apispec[validation]>=6.3.0",
    "flask-apispec>=0.11.4",
    "PyYAML>=6.0"
]

[project.scripts]
start-server = "aiproxysrv.server:main"
start-worker = "aiproxysrv.worker:main"

[tool.setuptools.packages.find]
where = ["src"]
