[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitestmock"
version = "1.6.5"
dependencies = [
    "Flask>=3.1.2",
    "Flask-CORS>=4.0.0",
    "Werkzeug>=3.1.0",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "tomli>=2.0.0",
    "loguru>=0.7.0"
]

[project.scripts]
start-server = "aitestmock.server:main"

[tool.setuptools.packages.find]
where = ["src"]
